--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -78,3 +78,24 @@
     color: #ffffff;
     padding: 10px;
 }
+
+.login-btn {
+    padding: 12px 40px;
+    border: none;
+    outline: none;
+    color: #000000;
+    cursor: pointer;
+    position: relative;
+    z-index: 1001;
+    border-radius: 12px;
+    font-weight: bold;
+    background-color:#c3c0c0;
+    font-size: 16px;
+    right: -1600px;
+    top: -45px;
+}
+
+.login-btn:hover {
+    background-color: #18668a; 
+    color: #ffffff; 
+}
