--- a/css/styleprofile.css
+++ b/css/styleprofile.css
@@ -9,7 +9,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-size: cover;
     background-position: center;
     z-index: -1;
@@ -42,8 +42,9 @@
 .navbar a:hover {
     background-color: #ffffffc2;
     color: #000000;
-    transition: background-color 0.3s ease, color 0.3s ease;
 }
+
+
 
 .table-card {
     background-color: #ffffff;
@@ -56,10 +57,6 @@
     padding: 20px; 
     border-radius: 8px; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-}
-
-.foto-card {
-    size: 10px;
 }
 
 .identitas {
