--- a/css/styleabout.css
+++ b/css/styleabout.css
@@ -4,21 +4,9 @@
     font-family: "Poppins", sans-serif;
 }
 
-.image-background {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
+body {
+    background-image: url("/porto/Image/1567666.png");
     background-size: cover;
-    background-position: center;
-    z-index: -1;
-}
-
-.image-background img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
 }
 
 .navbar {
@@ -43,4 +31,37 @@
     background-color: #ffffffc2;
     color: #000000;
     transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.login-btn {
+    padding: 12px 40px;
+    border: none;
+    outline: none;
+    color: #000000;
+    cursor: pointer;
+    position: relative;
+    z-index: 1001;
+    border-radius: 12px;
+    font-weight: bold;
+    background-color: #c3c0c0;
+    font-size: 16px;
+    right: -1600px;
+    top: -45px;
+}
+
+.login-btn:hover {
+    background-color: #18668a;
+    color: #ffffff;
+}
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #112859c3;
+    text-align: center;
+    font-size: 12px;
+    color: #ffffff;
+    padding: 10px;
 }
