--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -1,3 +1,89 @@
-.body {
-    background-image: url('Image\1567666.png');
+body {
+    background-image: url("/porto/Image/1567666.png");
+    background-size: cover;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: "Poppins", sans-serif;
+}
+
+.navbar {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 50px;
+    background-color: #112859c3;
+}
+
+.navbar a {
+    display: block;
+    color: #ffffff;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    margin: 0 10px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.navbar a:hover {
+    background-color: #ffffffc2;
+    color: #000000;
+}
+
+.container {
+    text-align: center;
+    color: #ffffff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+}
+
+.container h1 {
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.text-center {
+    margin-bottom: 20px;
+    line-height: 1.5;
+    font-size: 16px;
+    padding: 10px;
+}
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #112859c3;
+    text-align: center;
+    font-size: 12px;
+    color: #ffffff;
+    padding: 10px;
+}
+
+
+.login-btn {
+    padding: 12px 40px;
+    border: none;
+    outline: none;
+    color: #000000;
+    cursor: pointer;
+    position: relative;
+    z-index: 1001;
+    border-radius: 12px;
+    font-weight: bold;
+    background-color: #c3c0c0;
+    font-size: 16px;
+    right: -1600px;
+    top: -45px;
+}
+
+.login-btn:hover {
+    background-color: #18668a;
+    color: #ffffff;
 }
