--- a/css/styleprofile.css
+++ b/css/styleprofile.css
@@ -4,21 +4,8 @@
     font-family: "Poppins", sans-serif;
 }
 
-.image-background {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-position: center;
-    z-index: -1;
-}
-
-.image-background img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+body {
+    background-color: #ccc;
 }
 
 .navbar {
@@ -42,21 +29,59 @@
 .navbar a:hover {
     background-color: #ffffffc2;
     color: #000000;
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
 
+.judul {
+    text-align: center;
+    margin: 20px;
+}
 
-
-.table-card {
+.foto-card {
     background-color: #ffffff;
     color: #000000;
     text-align: center;
     position: absolute;
-    top: 50%; 
-    left: 50%; 
+    top: 48%; 
+    left: 25%; 
+    transform: translate(-50%, -50%); 
+    border-radius: 8px; 
+    box-shadow: 0 4px 8px rgb(0, 0, 0); 
+    width: 450px;
+}
+
+.foto-descrip {
+    color: #000000;
+    text-align: left;
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.foto-descrip td {
+    padding: 10px;
+}
+
+
+.foto-card img {
+    width: 100%;
+    height: auto;
+    border-radius: 2%;
+}
+
+.table-card {
+    background-color: #ffffff;
+    color: #000000;
+    text-align: left;
+    position: absolute;
+    top: 42%; 
+    left: 60%; 
     transform: translate(-50%, -50%); 
     padding: 20px; 
     border-radius: 8px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.434);
+    width: 40%;
+    max-width: 600px;
+    height: 22%;
 }
 
 .identitas {
@@ -67,4 +92,62 @@
 .identitas td {
     padding: 10px;
     border: 1px solid #ccc;
+}
+
+.desc-card {
+    background-color: #ffffff;
+    color: #000000;
+    text-align: left;
+    position: absolute;
+    bottom: 18%; 
+    left: 60%; 
+    transform: translate(-50%, -50%); 
+    padding: 20px; 
+    border-radius: 8px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.434);
+    width: 40%;
+    max-width: 600px;
+    height: 12%;
+}
+
+.description {
+    width: 100%;
+    border-collapse: collapse;
+    text-align: justify;
+    padding: 10px;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+.login-btn {
+    padding: 12px 40px;
+    border: none;
+    outline: none;
+    color: #000000;
+    cursor: pointer;
+    position: relative;
+    z-index: 1001;
+    border-radius: 12px;
+    font-weight: bold;
+    background-color: #c3c0c0;
+    font-size: 16px;
+    right: -1600px;
+    top: -45px;
+}
+
+.login-btn:hover {
+    background-color: #18668a;
+    color: #ffffff;
+}
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #112859c3;
+    text-align: center;
+    font-size: 12px;
+    color: #ffffff;
+    padding: 10px;
 }
