--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("Image/1567666.png");
+    background-image: url("/porto/Image/1567666.png");
     background-size: cover;
 }
 
