--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -1,11 +1,12 @@
-body {
-    background-size: cover;
-}
-
 * {
     margin: 0;
     padding: 0;
     font-family: "Poppins", sans-serif;
+}
+
+body {
+    background-color: #000000;
+    background-image: url(/image/backgroundImage.png);
 }
 
 .navbar {
