--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -6,7 +6,7 @@
 
 body {
     background-color: #000000;
-    background-image: url(/image/backgroundImage.png);
+    background-image: url(backgroundImage.png);
 }
 
 .navbar {
