--- a/css/styleprofile.css
+++ b/css/styleprofile.css
@@ -48,6 +48,7 @@ body {
     border-radius: 8px; 
     box-shadow: 0 4px 8px rgb(0, 0, 0); 
     width: 450px;
+    position: fixed;
 }
 
 .foto-descrip {
@@ -72,7 +73,7 @@ body {
     background-color: #ffffff;
     color: #000000;
     text-align: left;
-    position: absolute;
+    position: fixed;
     top: 42%; 
     left: 60%; 
     transform: translate(-50%, -50%); 
