--- a/css/styleabout.css
+++ b/css/styleabout.css
@@ -5,8 +5,11 @@
 }
 
 body {
-    background-color: #000000;
-    background-image: url(../image/backgroundImage.png);
+    background-color: #1c8af09d;
+}
+
+.judul {
+    text-align: center;
 }
 
 .navbar {
@@ -30,28 +33,6 @@ body {
 .navbar a:hover {
     background-color: #ffffffc2;
     color: #000000;
-}
-
-.container {
-    text-align: center;
-    color: #ffffff;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-}
-
-.container h1 {
-    font-size: 40px;
-    font-weight: bold;
-}
-
-.text-center {
-    margin-bottom: 20px;
-    line-height: 1.5;
-    font-size: 16px;
-    padding: 10px;
 }
 
 .footer {
@@ -107,4 +88,29 @@ body {
 .sign-btn:hover {
     background-color: #18668a;
     color: #ffffff;
+}
+
+.desc-card {
+    background-color: #ffffff;
+    color: #000000;
+    text-align: left;
+    position: absolute;
+    bottom: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    padding: 20px; 
+    border-radius: 8px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.434);
+    width: 40%;
+    max-width: 600px;
+    height: 12%;
+}
+
+.description {
+    width: 100%;
+    border-collapse: collapse;
+    text-align: justify;
+    padding: 10px;
+    font-size: 16px;
+    line-height: 1.5;
 }
