--- a/css/styleprofile.css
+++ b/css/styleprofile.css
@@ -132,11 +132,32 @@ body {
     font-weight: bold;
     background-color: #c3c0c0;
     font-size: 16px;
-    right: -1600px;
+    right: -1470px;
     top: -45px;
 }
 
 .login-btn:hover {
+    background-color: #18668a;
+    color: #ffffff;
+}
+
+.sign-btn {
+    padding: 12px 40px;
+    border: none;
+    outline: none;
+    color: #000000;
+    cursor: pointer;
+    position: relative;
+    z-index: 1001;
+    border-radius: 12px;
+    font-weight: bold;
+    background-color: #c3c0c0;
+    font-size: 16px;
+    right: -1500px;
+    top: -45px;
+}
+
+.sign-btn:hover {
     background-color: #18668a;
     color: #ffffff;
 }
